--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,41 @@
-html,
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
 }
+.saas-app-shell__inner {
+}
+
+.saas-app-shell__main {
+  background-color: white;
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+  z-index: -1;
+}
+
+/* .container {
+  width: 200px;
+  background-color: #c1ffbc;
+} */
+
+.chakra-ui-light {
+  background-color: #d7e8d7;
+  margin: 80px 90px 80px 90px;
+  border-radius: 20px;
+}
+
+.chakra-heading {
+  width: 400px;
+}
+
+.heading {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.heading_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 200px;
+  margin-bottom: 90px;
+}
+
