--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,6 +56,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  /* flex-wrap: wrap;  //добавить в медиа */
   gap: 200px;
   margin-bottom: 90px;
 }
