--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,7 +39,7 @@ body {
 
 .chakra-ui-light {
   background-color: #d7e8d7;
-  margin: 80px 90px 80px 90px;
+  margin: 30px 40px 30px 40px;
   border-radius: 20px;
 }
 
@@ -88,4 +88,52 @@ body {
 .videoBackgraund {
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
+}
+
+.login_modal {
+  border: 5px solid #d9d0ff;
+  border-radius: 20px;
+  margin: auto;
+  background: #ffffff;
+}
+
+.login_modal_header {
+  font-size: 20px;
+  padding: 15px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.login_input {
+  width: 220px;
+  height: 30px;
+  border: 1px solid #d9d0ff;
+  border-radius: 10px;
+}
+
+.login_input::placeholder {
+  font-size: 15px;
+  padding-left: 10px;
+}
+
+/* .login_input:focus {
+  border: none;
+} */
+
+.login_btn {
+  margin: 25px 25px 0px 0px;
+}
+
+.login_btn,
+.login_closebtn {
+  width: 100px;
+  background-color: #d7e8d7;
+  font-weight: 500;
+  padding: 10px 15px;
+  border-radius: 20px;
+}
+
+.login_btn:hover,
+.login_closebtn:hover {
+  background-color: #d9d0ff;
 }
