--- a/client/src/index.css
+++ b/client/src/index.css
@@ -233,3 +233,15 @@ body {
 .save_btn:hover {
   background-color: #b8e3b8;
 }
+
+.checkbox {
+  margin-right: 15px;
+}
+.checkbox:hover {
+  cursor: pointer;
+  color: #d9d0ff;
+}
+
+.css-i6ew5e {
+  background-color: #b8e3b8;
+}
